--- a/index.html
+++ b/index.html
@@ -7,19 +7,7 @@
     <title>BS5 Basic-Grid</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-        .titlee {
-            text-align: center;
-            background: rgb(226, 95, 43);
-        }
-        .container-fluid {
-            background: blueviolet;
-        }
-        .col {
-            border: 2px solid black;
-            margin: 5px;
-        } 
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="titlee"><h1>Bootstrap Basic-Grid</h1></div>
